--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@headlessui/vue": "^1.7.23",
     "@vueuse/core": "^12.7.0",
     "element-plus": "^2.9.4",
+    "fuse.js": "^7.1.0",
     "pinia": "^3.0.1",
     "vue": "^3.5.13"
   },
