--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Basic-Chat-App-With-AI-Integration",
+  "name": "Conversational-Chatbot-for-FAQs",
   "private": true,
   "version": "0.0.1",
   "scripts": {
@@ -14,12 +14,14 @@
     "@vueuse/core": "^12.7.0",
     "element-plus": "^2.9.4",
     "fuse.js": "^7.1.0",
+    "markdown-it": "^14.1.0",
     "pinia": "^3.0.1",
     "vue": "^3.5.13"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.15",
     "@types/lodash-es": "^4.17.12",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^22.13.4",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
