--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vueuse/core": "^12.7.0",
     "element-plus": "^2.9.4",
     "fuse.js": "^7.1.0",
+    "lucide-vue-next": "^0.477.0",
     "markdown-it": "^14.1.0",
     "pinia": "^3.0.1",
     "vue": "^3.5.13"
