--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/vue": "^1.7.23",
     "@vueuse/core": "^12.7.0",
     "element-plus": "^2.9.4",
+    "firebase": "^11.4.0",
     "fuse.js": "^7.1.0",
     "lucide-vue-next": "^0.477.0",
     "markdown-it": "^14.1.0",
